[gd_scene load_steps=29 format=2]

[ext_resource path="res://Textures/random/poker.jpg" type="Texture" id=1]
[ext_resource path="res://Sprites/Casino/Cards/CardBack.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Casino/Cards/CardFaceBlank.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Casino/Road.gd" type="Script" id=4]
[ext_resource path="res://prefabs/Casino/CardGames/PlayingCard.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Casino/SwwethandJackSprites/pointer_animated.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Casino/Pointer.gd" type="Script" id=7]
[ext_resource path="res://Sprites/misc/empty.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Casino/UI_CHIPS.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Casino/UI_WAGER.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Casino/UI_Blank.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Casino/UI_BET.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Casino/UI_CALL.png" type="Texture" id=13]
[ext_resource path="res://fonts/PlayheadFREE.otf" type="DynamicFontData" id=14]
[ext_resource path="res://Sprites/Casino/UI_RAISEHover.jpg" type="Texture" id=15]
[ext_resource path="res://Sprites/Casino/UI_RAISE.jpg" type="Texture" id=16]
[ext_resource path="res://Sprites/Casino/UI_BETHover.jpg" type="Texture" id=17]
[ext_resource path="res://Sprites/Casino/UI_SKIP.jpg" type="Texture" id=18]
[ext_resource path="res://Sprites/Casino/UI_SKIPHover.jpg" type="Texture" id=19]
[ext_resource path="res://Sprites/Casino/UI_CALLHover.jpg" type="Texture" id=20]
[ext_resource path="res://Sprites/UI/Arrow.png" type="Texture" id=21]
[ext_resource path="res://Sprites/UI/ArrowDim.png" type="Texture" id=22]
[ext_resource path="res://Sprites/UI/ArrowHover.png" type="Texture" id=23]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 3 ), SubResource( 2 ), SubResource( 3 ), SubResource( 2 ), SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[node name="Road" type="Control" groups=[
"Road",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
cardResource = ExtResource( 5 )
emptyCursor = ExtResource( 8 )

[node name="Container" type="Node2D" parent="."]
z_index = 30

[node name="Sprite" type="Sprite" parent="Container"]
visible = false
position = Vector2( -22.3394, 0 )
scale = Vector2( 0.556, 0.56 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Hand" type="Node2D" parent="Container"]
visible = false
position = Vector2( 443.361, 554.709 )

[node name="Hand1" type="Sprite" parent="Container/Hand"]
scale = Vector2( 0.555728, 0.555728 )
texture = ExtResource( 3 )

[node name="Hand2" type="Sprite" parent="Container/Hand"]
position = Vector2( 148.651, 0 )
scale = Vector2( 0.555728, 0.555728 )
texture = ExtResource( 3 )

[node name="Hand3" type="Sprite" parent="Container/Hand"]
position = Vector2( 298.491, 0 )
scale = Vector2( 0.555728, 0.555728 )
texture = ExtResource( 3 )

[node name="Discard" type="Sprite" parent="Container"]
modulate = Color( 1, 1, 1, 0.0509804 )
position = Vector2( 606.862, 345.608 )
scale = Vector2( 0.202318, 0.202318 )
texture = ExtResource( 2 )

[node name="Deck" type="Sprite" parent="Container"]
visible = false
position = Vector2( 955.332, 344.218 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="TheRoad" type="Sprite" parent="Container"]
visible = false
position = Vector2( 411.466, -160.339 )

[node name="4" type="Sprite" parent="Container/TheRoad"]
position = Vector2( 286.308, 503.78 )
scale = Vector2( 0.202318, 0.202318 )
texture = ExtResource( 3 )

[node name="5" type="Sprite" parent="Container/TheRoad"]
position = Vector2( 372.69, 504.641 )
scale = Vector2( 0.202318, 0.202318 )
texture = ExtResource( 3 )

[node name="6" type="Sprite" parent="Container/TheRoad"]
position = Vector2( 458.859, 504.938 )
scale = Vector2( 0.202318, 0.202318 )
texture = ExtResource( 3 )

[node name="Pointer" type="AnimatedSprite" parent="Container"]
visible = false
position = Vector2( 697.127, 277.579 )
frames = SubResource( 4 )
frame = 3
playing = true
script = ExtResource( 7 )

[node name="UIContainer" type="Node2D" parent="Container"]
z_index = 1

[node name="Chips" type="Sprite" parent="Container/UIContainer"]
position = Vector2( 495.066, 35.2919 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 9 )

[node name="Blank" type="Sprite" parent="Container/UIContainer"]
position = Vector2( 562.103, 35.1306 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 11 )

[node name="Wager" type="Sprite" parent="Container/UIContainer"]
position = Vector2( 495.066, 88.3282 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 10 )

[node name="Blank2" type="Sprite" parent="Container/UIContainer"]
position = Vector2( 562.103, 88.1669 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 11 )

[node name="ChipsLabel" type="Label" parent="Container/UIContainer"]
margin_left = 533.378
margin_top = 13.3784
margin_right = 595.378
margin_bottom = 61.3784
custom_fonts/font = SubResource( 5 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WagerLabel" type="Label" parent="Container/UIContainer"]
margin_left = 533.378
margin_top = 65.4062
margin_right = 595.378
margin_bottom = 113.406
custom_fonts/font = SubResource( 5 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BetButton" type="TextureButton" parent="Container/UIContainer"]
margin_left = 870.939
margin_top = 29.254
margin_right = 1034.94
margin_bottom = 157.254
rect_scale = Vector2( 0.459875, 0.459875 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RaiseButton" type="TextureButton" parent="Container/UIContainer"]
margin_left = 870.939
margin_top = 29.254
margin_right = 1034.94
margin_bottom = 157.254
rect_scale = Vector2( 0.459875, 0.459875 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CallButton" type="TextureButton" parent="Container/UIContainer"]
margin_left = 776.939
margin_top = 29.254
margin_right = 940.939
margin_bottom = 157.254
rect_scale = Vector2( 0.459875, 0.459875 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipButton" type="TextureButton" parent="Container/UIContainer"]
margin_left = 776.939
margin_top = 29.254
margin_right = 940.939
margin_bottom = 157.254
rect_scale = Vector2( 0.459875, 0.459875 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BetUIContainer" type="Node2D" parent="Container/UIContainer"]
position = Vector2( 776.939, 29.254 )
scale = Vector2( 0.459875, 0.459875 )

[node name="Blank3" type="Sprite" parent="Container/UIContainer/BetUIContainer"]
position = Vector2( 284.366, 208.562 )
scale = Vector2( 0.869801, 0.869801 )
texture = ExtResource( 11 )

[node name="Increase" type="TextureButton" parent="Container/UIContainer/BetUIContainer"]
margin_left = 372.927
margin_top = 179.396
margin_right = 412.927
margin_bottom = 219.396
rect_scale = Vector2( 1.99063, 1.99063 )
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncreaseTimerTick" type="Timer" parent="Container/UIContainer/BetUIContainer/Increase"]
wait_time = 0.5

[node name="Decrease" type="TextureButton" parent="Container/UIContainer/BetUIContainer"]
margin_left = 129.383
margin_top = 239.195
margin_right = 169.383
margin_bottom = 279.195
rect_scale = Vector2( 1.991, -1.991 )
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BetLabel" type="Label" parent="Container/UIContainer"]
margin_left = 878.378
margin_top = 101.406
margin_right = 940.378
margin_bottom = 149.406
custom_fonts/font = SubResource( 5 )
text = "1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BurnButton" type="Button" parent="."]
visible = false
modulate = Color( 0, 1, 0.0156863, 0.219608 )
margin_left = 921.0
margin_top = 294.0
margin_right = 990.0
margin_bottom = 397.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiscardButton" type="Button" parent="."]
visible = false
modulate = Color( 0, 1, 0.0156863, 0.219608 )
margin_left = 573.238
margin_top = 294.0
margin_right = 642.238
margin_bottom = 397.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRoad" type="Button" parent="."]
visible = false
margin_left = 676.0
margin_top = 311.0
margin_right = 894.0
margin_bottom = 382.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterUiPosition" type="Node2D" parent="."]
position = Vector2( 512, 300 )

[node name="JackHandContainer" type="Node2D" parent="."]
position = Vector2( 277.795, -226.998 )
[connection signal="pressed" from="Container/UIContainer/BetButton" to="." method="_on_BetButton_pressed"]
[connection signal="pressed" from="Container/UIContainer/RaiseButton" to="." method="_on_RaiseButton_pressed"]
[connection signal="button_down" from="Container/UIContainer/CallButton" to="." method="_on_CallButton_button_down"]
[connection signal="button_down" from="Container/UIContainer/SkipButton" to="." method="_on_SkipButton_button_down"]
[connection signal="button_down" from="Container/UIContainer/BetUIContainer/Increase" to="." method="_on_Increase_button_down"]
[connection signal="timeout" from="Container/UIContainer/BetUIContainer/Increase/IncreaseTimerTick" to="." method="_on_IncreaseTimerTick_timeout"]
[connection signal="button_down" from="Container/UIContainer/BetUIContainer/Decrease" to="." method="_on_Decrease_button_down"]
[connection signal="mouse_entered" from="BurnButton" to="." method="_on_BurnButton_mouse_entered"]
[connection signal="mouse_exited" from="BurnButton" to="." method="_on_BurnButton_mouse_exited"]
[connection signal="pressed" from="BurnButton" to="." method="_on_BurnButton_pressed"]
[connection signal="mouse_entered" from="DiscardButton" to="." method="_on_DiscardButton_mouse_entered"]
[connection signal="mouse_exited" from="DiscardButton" to="." method="_on_DiscardButton_mouse_exited"]
[connection signal="pressed" from="DiscardButton" to="." method="_on_DiscardButton_pressed"]
[connection signal="mouse_entered" from="ButtonRoad" to="." method="_on_ButtonRoad_mouse_entered"]
[connection signal="mouse_exited" from="ButtonRoad" to="." method="_on_ButtonRoad_mouse_exited"]
[connection signal="pressed" from="ButtonRoad" to="." method="_on_ButtonRoad_pressed"]
